[package]
name = "block_breaker"
version = "0.1.0"
edition = "2024"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.108"
js-sys = "0.3.76"
web-sys = { version = "0.3.85", features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "CanvasGradient",
    "Element",
    "HtmlElement",
    "CssStyleDeclaration",
    "KeyboardEvent",
    "MouseEvent",
    "Touch",
    "TouchEvent",
    "TouchList",
    "Performance",
] }

[profile.release]
opt-level = "z"
codegen-units = 1
lto = true
strip = true
panic = "abort"
debug = false
incremental = false
